--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,7 @@
 build:
   docker:
-    web: Docker/Dockerfile
+    web: Dockerfile
+    worker: Docker/Dockerfile
+
 run:
   web: bundle exec puma -C config/puma.rb
