--- a/heroku.yml
+++ b/heroku.yml
@@ -1,7 +1,3 @@
 build:
   docker:
-    web: Dockerfile
-    worker: Docker/Dockerfile
-
-run:
-  web: bundle exec puma -C config/puma.rb
+    web: Docker/Dockerfile
