--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.8.8-slim-buster
-COPY requirements.txt ./requirements.txt
+COPY requirements.txt .
 RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
